Opened 17 years ago
Closed 16 years ago
#1559 closed bug (fixed)
[Tracker] shifted volume icon
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/pre-alpha1 |
Keywords: | Cc: | alex@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
If you change in Tracker preferences "Show Volume on Desktop" option to "Show Disks icon" and then press Defaults button Disks icon will disappear, but Haiku volume icon will not be moved back to the first position and will stay fourth instead.
Please try several times to reproduce, as this sometimes work as intendent.
Note:
See TracTickets
for help on using tickets.
It seems that Tracker tries to autoplace the Haiku and Disks icon, and sometimes the previous icon has not yet disapeared while it tries to autoplace the new icon.
What i noticed: BPoseView::SavePoseLocations() is not called when changing this pref. If you change the icon size, it will trigger a SavePoseLocations(), do this, with Disks icon and then Haiku icon visible, and they will keep their position.