* Give a chance to volume/disks icons to save their position when changing the  "Show Disks/Volumes Icon" preference. Fixes #1559 * Automatic white space cleanup

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32513 a95241bf-73f2-0310-859d-f6bbb57e9c96